[project]
name = "ardive"
version = "0.1.0"
description = "Command-line agent that pulls papers from arXiv and summarizes / explains them with a local open-source model."
requires-python = ">=3.10"
dependencies = [
    "ollama>=0.3",
    "arxiv>=2.1",
    "pypdf>=4.0",
]

[project.scripts]
ardive = "ardive.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ardive"]
