[project]
name = "ardive"
version = "0.1.6"
description = "Command-line agent that pulls papers from arXiv and summarizes / explains them with a local open-source model."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Rohan Kosalge", email = "rohankosalge06@gmail.com" }]
keywords = ["arxiv", "summarization", "cli", "ollama", "llm"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Environment :: Console",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "ollama>=0.3",
    "arxiv>=2.1",
    "pypdf>=4.0",
    "rich>=13",
]

[project.urls]
Homepage = "https://github.com/rohankosalge/arDive"
Repository = "https://github.com/rohankosalge/arDive"

[project.scripts]
ardive = "ardive.cli:main"

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ardive"]
